@@ -1,4 +1,11 @@
 
+2023-10-17  David Declerck <david.declerck@ocamlpro.com>
+
+	* codegen.c (codegen_internal, codegen_finalize): move declaration
+	  of decimal constants from global storage to local storage to
+	  fix bug #917 (segfault on decimal constant after CANCEL on
+	  subprogram)
+
 2023-09-12  Simon Sobisch <simonsobisch@gnu.org>
 
 	* codegen.c (literal_list): removed self-reference as tree
